# tide

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
core/: ansi_parser.cpp  ansi_parser.hpp  grid_buffer.cpp  grid_buffer.hpp  pty.cpp  pty.hpp  terminal.cpp  terminal.hpp
glad/: glad.c  glad.h
input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
platform/linux/: window.cpp  window.hpp
render/: font.cpp  font.hpp  renderer.cpp  renderer.hpp
theme/: theme.cpp  theme.hpp
